# domains-oxide

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
analysis/: Cargo.toml
analysis/src/: analyses.rs  analyses_tests.rs  cfg.rs  cfg_tests.rs  domains.rs  domains_tests.rs  lib.rs  solvers.rs
analysis/src/domains/: domains_tests.rs  finite.rs  numerical.rs  transformers.rs
bril-driver/: Cargo.toml  README.md
bril-driver/src/: driver_tests.rs  lib.rs  main.rs
bril-lib/: Cargo.toml
bril-lib/src/: analysis.rs  eval.rs  eval_tests.rs  ir.rs  lexer.rs  lexer_tests.rs  lib.rs  parser.rs  parser_tests.rs
bril-lib/src/analysis/: congruence_analysis.rs  congruence_analysis_tests.rs  interval_analysis.rs  interval_analysis_tests.rs  sign_analysis.rs  sign_analysis_tests.rs
domains-driver/: Cargo.toml
domains-driver/src/: driver_tests.rs  lib.rs  main.rs
domains-lib/: Cargo.toml
domains-lib/src/: analysis.rs  ast.rs  cfg.rs  cfg_tests.rs  eval.rs  eval_tests.rs  lexer.rs  lexer_tests.rs  lib.rs  parser.rs  parser_tests.rs  render.rs
domains-lib/src/analysis/: interval_analysis.rs  interval_analysis_tests.rs  reachability_analysis.rs  reachability_analysis_tests.rs  sign_analysis.rs  sign_analysis_test.rs
driver/: Cargo.toml
examples/: allElements.tr  fact.bril  intervalDemo.tr  largerCfg.tr  nesting.tr  signDemo.tr
parser/: Cargo.toml
parser-fuzz/: .gitignore  Cargo.toml
parser-fuzz/src/: main.rs
parser/src/: ast.rs  lexer.rs  lexer_tests.rs  lib.rs  parser.rs  parser_tests.rs
tools/ide/trlang/: CHANGELOG.md  README.md  language-configuration.json  package.json  trlang.vsix
tools/ide/trlang/syntaxes/: tr.tmLanguage.json
transform-driver/: Cargo.toml  README.md
transform-driver/src/: driver_tests.rs  lib.rs  main.rs
transform-lib/: Cargo.toml
transform-lib/src/: analysis.rs  ast.rs  cfg.rs  cfg_tests.rs  eval.rs  eval_tests.rs  lexer.rs  lexer_tests.rs  lib.rs  parser.rs  parser_tests.rs  render.rs
transform-lib/src/analysis/: interval_analysis.rs  reachability_analysis.rs  sign_analysis.rs  sign_analysis_tests.rs
transform-parser-fuzz/: Cargo.toml
utils/: Cargo.toml
utils/src/: lib.rs
