[package]
name = "analysis"
description = "Library for implementing static analysis tools"
repository = "https://github.com/Xazax-hun/domains-oxide"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["static analysis", "program analysis"]
categories = ["compilers", "development-tools", "mathematics"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.2.3"
fixedbitset = "0.4.2"
paste = "1.0.11"
[dev-dependencies]
itertools = "0.10.5"