[package]
name = "transform-lib"
description = "Library for a toy language to help experiment with static analysis"
repository = "https://github.com/Xazax-hun/domains-oxide"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["compiler", "interpreter", "static analysis", "program analysis", "language"]
categories = ["compilers", "development-tools"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
analysis = { path = "../analysis"}
rand = "0.8.5"
itertools = "0.11.0"
cairo-rs = { version = "0.18.0", features = ["svg"] }
