[package]
name = "utils"
description = "Various utilities for geometry, io and other purposes."
repository = "https://github.com/Xazax-hun/domains-oxide"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["utils"]
categories = ["compilers", "development-tools", "utils"]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
